--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    <title>FlaskBlog</title>
+    <title>Message Cayden!</title>
 </head>
 
 <body>
     <h1>Cayden-Message-Send-Inator</h1>
     <form action="{{url_for("name")}}" method="post">
+        <label for="name">Your Name:</label>
+        <input type="text" id="name_box" name="name" placeholder="Your Name" size="25"><br>
         <label for="message">Message:</label>
-        <input type="text" id="message" name="message" placeholder="Enter your message here!">
+        <input type="text" id="message_box" name="message" placeholder="Your Message" size="140" maxlength="280"><br>
         <button type="submit">Send!</button>
 </body>
 
