--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,14 @@
 
 <body>
     <h1>Cayden-Message-Send-Inator</h1>
-    <form action="{{url_for("name")}}" method="post">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name_box" name="name" placeholder="Your Name" size="25"><br>
-        <label for="message">Message:</label>
-        <input type="text" id="message_box" name="message" placeholder="Your Message" size="140" maxlength="280"><br>
+    <h2>This website allows you to send a message to a thermal printer in my dorm room!<br>
+        It may be down from time to time as I upgrade it.</h2>
+    <form action="{{url_for("name")}}" method="post" id="message_form">
+        <label for="name_box">Your Name:</label><br>
+        <input type="text" id="name_box" name="name" placeholder="Your Name" size="28" maxlength="28" autofocus><br><br>
+        <label for="message_box">Message:</label><br>
+        <textarea id="message_box" name="message" rows="5" cols="56" name="comment" placeholder="Your Message"
+            form="message_form" maxlength="280" required></textarea><br>
         <button type="submit">Send!</button>
 </body>
 
