--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,6 @@ h1 {
     color: red;
     text-align: center;
     padding: 10px;
-    width: 100vw;
 }
 
 #message_form {
@@ -26,4 +25,9 @@ body {
 
 #message_box {
     background-color: white;
+}
+
+#submit_button {
+    width: 20em;
+    height: 4em;
 }
