--- a/templates/success.html
+++ b/templates/success.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    <title>Message Cayden!</title>
+    <title>Success!</title>
 </head>
 
 <body>
     <h1>Cayden-Message-Send-Inator</h1>
     <h2>Your message has been successfully sent!</h2>
+    <hr>
+    <p>{{all_time_count}} messages submitted since the beginning of this project.</p>
+    <p>{{hourly_count}} out of 12 messages submitted this hour.</p>
+    <hr>
+    <h2>Recent Messages:</h2>
+    {%for i in range(0, len)%}
+    <p>"{{recent_list[i][1]}}" -{{recent_list[i][0]}}</p>
+    {%endfor%}
 </body>
 
 </html>
